# I2C_Source

./: .gitignore  Dockerfile  LICENSE  LOGO LICENSE  README.md  app-streamlit.py  app.py  app_streamlit.py  generateAndSendCaption.py  generatecaption.py  imagecaption.py  requirements.txt  requirements_updated.txt  sendmessage.py  test.py  testanother.py
app_android/: app.json  package-lock.json  package.json
cachemodel/: __init__.py  cachedmodel.py  cachemodel.py  diskcachedmodel.py
capgenaize/: .gitignore  App.tsx  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
docs/: conf.py  index.rst  installation.rst  src.aws_s3.rst  src.cached_model.rst  src.chromadb_vector_store.rst  src.configuration_manager.rst  src.generate_caption.rst  src.image_caption.rst  src.image_captioning_pipeline.rst  src.image_compressor.rst  src.logger.rst  src.login.authenticate_user.rst  src.login.database.rst  src.login.hash_password.rst  src.login.register_user.rst  src.login.rst  src.login.user_db.rst  src.rst  src.trending_hashtag.rst  src.video_scene_detector.rst
frontend/: package-lock.json  package.json
generatecaption/: __init__.py  generatecaption.py
imagecaption/: __init__.py  imagecaption.py
imagecompressor/: __init__.py  imagecompressor.py
others/: jlib.py  preloadpipeline.py
sendmessage/: __init__.py  (+1 more)
src_cpp/: CMakeLists.txt  setup_env.sh
src_cpp/configuration_manager/: CMakeLists.txt  config.yaml
src_cpp/configuration_manager/include/: ConfigManager.h  ConfigModels.h
src_cpp/configuration_manager/src/: ConfigManager.cpp  ConfigModels.cpp  main.cpp
src_cpp/image_pipeline/impl/include/: Blip2Pipeline.h
src_cpp/image_pipeline/impl/src/: Blip2Pipeline.cpp
src_cpp/image_pipeline/interface/include/: ImagePipelineInterface.h
src_cpp/image_pipeline/interface/src/: ImagePipelineInterfacePyBind.cpp
src_cpp/inference/impl/include/: Blip2Model.h
src_cpp/inference/impl/src/: Blip2Model.cpp
src_cpp/inference/interface/include/: InferenceInterface.h  InferenceIntreface.h
src_cpp/prompt_processor/: CMakeLists.txt  FacebookStrategy.cpp  InstagramStrategy.cpp  LinkedinStrategy.cpp  PlatformStrategy.cpp  PromptFactory.cpp  PromptParams.cpp  PromptStrategy.cpp  PromptTemplateParser.cpp  TiktokStrategy.cpp  TwitterStrategy.cpp  main.cpp
src_cpp/prompt_processor/include/: FacebookStrategy.h  InstagramStrategy.h  LinkedinStrategy.h  PersonaConsts.h  PlatformStrategy.h  PromptConsts.h  PromptFactory.h  PromptParams.h  PromptStrategy.h  PromptTemplateParser.h  SocialMediaConsts.h  StringTemplate.h  TiktokStrategy.h  TwitterStrategy.h  logging.h  personaInfo.h  platformPersonas.h
src_cpp/prompt_processor/templates/: facebook_template.txt  insta_template.txt  linkedin_template.txt  tiktok_template.txt  twitter_template.txt
(+228 files in other folders)
